flashレイアウト, tweetチェックボックス

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
     <%= display_meta_tags(default_meta_tags) %>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Qa</title>
+    <title>MyQuestion</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
@@ -20,7 +20,7 @@
 
   <body>
     <%= render 'layouts/navbar' %>
-    <div class="main pb-5">
+    <div class="main py-5">
       <div class="container-fluid">
         <div class="row">
           <div class="col-sm-6 offset-sm-3">
