--- a/app/views/replies/confirm_new.html.erb
+++ b/app/views/replies/confirm_new.html.erb
@@ -10,7 +10,7 @@
       <%= f.hidden_field :content, value: @reply.content %>
       <%= f.hidden_field :post_id, value: @post.id %>
       <%= f.submit '送信する', class: 'btn btn-outline-secondary btn-block' %>
-      <%= f.submit 'キャンセル', name: 'back', class: 'btn btn-primary btn-block mu-3' %>
+      <%= f.submit 'キャンセル', name: 'back', class: 'btn btn-danger btn-block' %>
     <% end %>
   </div>
 </div>
