--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,19 +1,16 @@
-<div class="">
-
-</div>
 <div class="signup my-5">
   <div class="text-center">
-    <h3>Answersは、匿名で回答を募集できるサービスです。</h3>
+    <h3>MyQuestionは、匿名で回答を募集できるサービスです。</h3>
     <%= link_to "Twitterで登録/ログイン", user_twitter_omniauth_authorize_path, class: "btn btn-primary btn-block py-3 mt-5" %>
   </div>
 </div>
 <div class="description my-5">
   <div class="text-center">
-    <h3 class="my-3">Answersの使い方</h3>
+    <h3 class="my-3">MyQuestionの使い方</h3>
     <h5>1.登録/ログインする</h5>
     <p>Twitterアカウントを使って登録/ログインしましょう。</p>
     <h5>2.質問する</h5>
-    <p>何か疑問に思うことがあれば、何でも質問してみましょう。</p>
+    <p>疑問に思うことがあれば、何でも質問してみましょう。</p>
     <h5>3.回答する</h5>
     <p>フォローしている方々の質問にも答えてみましょう。<br>回答は匿名なので、気楽に送ってみましょう。</p>
   </div>
