--- a/app/views/toppages/edit.html.erb
+++ b/app/views/toppages/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="logout my-5 text-center">
+<div class="logout mb-5 text-center">
   <h1>ログアウト</h1>
   <%= link_to "ログアウト", destroy_user_session_path, method: :delete,
       class: "btn btn-secondary btn-block" %>
