--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -31,3 +31,9 @@ a {
   background-color: #d4edda;
   border-color: #c3e6cb;
 }
+
+.alert-alert {
+  color: #155724;
+  background-color: #d4edda;
+  border-color: #c3e6cb;
+}
