devise routes 設定

--- a/app/views/toppages/edit.html.erb
+++ b/app/views/toppages/edit.html.erb
@@ -7,6 +7,6 @@
   <h1>退会</h1>
   <p>Twitterとの連携を解除し、退会します。<br>
     なお、退会すると今までの質問がすべて削除されますのでご注意ください。</p>
-  <%= button_to "退会する", registration_path(current_user),
+  <%= button_to "退会する", registration_path,
     data: { confirm: "本当に退会しますか？" }, method: :delete %>
 </div>
