--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -2,6 +2,6 @@
   <%= form_with(model: [user, post], local: true, url: confirm_new_user_post_path(current_user)) do |f| %>
     <%= f.text_area :content, class: 'form-control js-text', rows: 8 %>
     <p class="js-text-count pull-right text-right"></p>
-    <%= f.submit '質問する', class: 'btn btn-outline-secondary btn-block p-3 mt-3' %>
+    <%= f.submit '質問する', class: 'btn btn-secondary btn-block p-3 mt-3' %>
   <% end %>
 </div>
