--- a/app/views/posts/confirm_new.html.erb
+++ b/app/views/posts/confirm_new.html.erb
@@ -8,8 +8,8 @@
         <%= simple_format(h(@post.content)) %>
       </div>
       <%= f.hidden_field :content, value: @post.content %>
-      <%= f.submit '送信する', class: 'btn btn-outline-secondary btn-block' %>
-      <%= f.submit 'キャンセル', name: 'back', class: 'btn btn-danger btn-block' %>
+      <%= f.submit '送信する', class: 'btn btn-secondary btn-block' %>
+      <%= f.submit 'キャンセル', name: 'back', class: 'btn btn-light btn-block' %>
       <%= f.label :tweet, class: "checkbox inline mt-3" do %>
         <%= f.check_box :tweet %>
         <span>質問をツイートする</span>
