--- a/app/views/toppages/show.html.erb
+++ b/app/views/toppages/show.html.erb
@@ -1,7 +1,7 @@
 <div class="toppage-profile card my-5">
   <div class="card-body">
     <%= render 'users/profile', user: current_user %>
-    <%= link_to "自分の質問を見る", user_path(current_user), class: "btn btn-outline-secondary btn-block mt-3" %>
+    <%= link_to "自分の質問を見る", user_path(current_user), class: "btn btn-secondary btn-block mt-3" %>
   </div>
 </div>
 <div class="form my-5">
