--- a/app/views/replies/_form.html.erb
+++ b/app/views/replies/_form.html.erb
@@ -3,6 +3,6 @@
     <%= f.text_area :content, class: 'form-control', rows: 8 %>
     <%= f.hidden_field :post_id, value: post.id %>
     <p class="js-text-count pull-right text-right"></p>
-    <%= f.submit '回答する', class: 'btn btn-outline-secondary btn-block p-3 mt-3' %>
+    <%= f.submit '回答する', class: 'btn btn-secondary btn-block p-3 mt-3' %>
   <% end %>
 </div>
