--- a/app/views/replies/confirm_new.html.erb
+++ b/app/views/replies/confirm_new.html.erb
@@ -9,7 +9,7 @@
       </div>
       <%= f.hidden_field :content, value: @reply.content %>
       <%= f.hidden_field :post_id, value: @post.id %>
-      <%= f.submit '送信する', class: 'btn btn-secondary btn-block' %>
+      <%= f.submit '送信する', class: 'btn btn-info btn-block' %>
       <%= f.submit 'キャンセル', name: 'back', class: 'btn btn-light btn-block' %>
     <% end %>
   </div>
