説明文修正

--- a/app/views/toppages/show.html.erb
+++ b/app/views/toppages/show.html.erb
@@ -16,7 +16,7 @@
 <div class="other-posts my-5">
   <div class="text-center">
     <h1>みんなの質問</h1>
-    <p>Twitterでフォローしているユーザーの質問です。<br>
+    <p>本サイトに登録しているユーザーの質問です。<br>
       回答はすべて匿名で送られるので、気楽に答えてみましょう。</p>
   </div>
   <%= render 'posts/posts', user: current_user, posts: @open_posts %>
