--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,6 +1,6 @@
 <div class="signup my-5">
   <div class="text-center">
-    <h3>Questerは、匿名で回答を募集できるサービスです。</h3>
+    <h3>Questerは、匿名での回答を募集できるサービスです。</h3>
     <%= link_to "Twitterで登録/ログイン", user_twitter_omniauth_authorize_path, class: "btn btn-primary btn-block py-3 mt-5" %>
   </div>
 </div>
