--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -25,7 +25,7 @@
     <% end %>
   </li>
   <% else %>
-    <%= link_to user_twitter_omniauth_authorize_path, class: "nav-item nav-link" do%>
+    <%= link_to user_twitter_omniauth_authorize_path, method: :post, class: "nav-item nav-link" do%>
       <i class="fas fa-sign-in-alt fa-3x"></i>
       <br>ログイン</br>
     <% end %>
