--- a/app/views/toppages/index.html.erb
+++ b/app/views/toppages/index.html.erb
@@ -1,7 +1,8 @@
 <div class="signup my-5">
   <div class="text-center">
     <h3>Questerは、匿名での回答を募集できるサービスです。</h3>
-    <%= link_to "Twitterで登録/ログイン", user_twitter_omniauth_authorize_path, class: "btn btn-primary btn-block py-3 mt-5" %>
+    <%= link_to "Twitterで登録/ログイン", user_twitter_omniauth_authorize_path,
+        method: :post, class: "btn btn-primary btn-block py-3 mt-5" %>
   </div>
 </div>
 <div class="description my-5">
