--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -18,19 +21,13 @@
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"></script>
   </head>
 
-  <body>
-    <div class="container-fluid bg-light">
-      <%= render 'layouts/navbar' %>
-    </div>
-    <div class="main py-5">
-      <div class="container-fluid">
-        <div class="row">
-          <div class="col-sm-6 offset-sm-3">
-            <%= render 'layouts/flash_messages' %>
-            <%= yield %>
-          </div>
-        </div>
+  <body class="app-shell">
+    <%= render 'layouts/navbar' %>
+    <main class="main py-5">
+      <div class="container-xl">
+        <%= render 'layouts/flash_messages' %>
+        <%= yield %>
       </div>
-    </div>
+    </main>
   </body>
 </html>
