--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,6 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css">
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -21,13 +18,15 @@
     <script defer src="https://use.fontawesome.com/releases/v5.7.2/js/all.js"></script>
   </head>
 
-  <body class="app-shell">
-    <%= render 'layouts/navbar' %>
-    <main class="main py-5">
-      <div class="container-xl">
+  <body>
+    <div class="container-fluid bg-white border-bottom">
+      <%= render 'layouts/navbar' %>
+    </div>
+    <div class="main py-5">
+      <div class="container content-wrapper">
         <%= render 'layouts/flash_messages' %>
         <%= yield %>
       </div>
-    </main>
+    </div>
   </body>
 </html>
