--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,8 @@
+<% share_image = @post.image_url(host: request.base_url) || image_url('default.png') %>
 <% set_meta_tags og: {
     title: "#{@user.username}@Quester",
     description: "#{@user.username}さんの質問です。「#{@post.content}」",
-    image: "#{@post.image_url}"
+    image: share_image
  } %>
 
 <%= image_tag(@post.image, width: "690", class: "img-fluid shadow-lg rounded-4") if @post.image.attached? %>
@@ -28,7 +29,7 @@
 <div class="toppage-profile card my-5">
   <div class="card-body">
     <div class="media p-3 border rounded">
-      <%= link_to image_tag("#{@user.image_url}", size: "80x80", class: "rounded-circle mr-3"),
+      <%= link_to image_tag(avatar_url(@user), size: "80x80", class: "rounded-circle mr-3"),
           user_path(@user) %>
       <div class="media-body">
         <h5><%= @user.username %></h5>
