--- a/app/views/users/_friends.html.erb
+++ b/app/views/users/_friends.html.erb
@@ -1,6 +1,6 @@
 <li class="media p-3 mb-3 border rounded">
   <%= link_to user_path(friends) do %>
-    <%= image_tag("#{friends.image_url}", size: "80x80", class: "rounded-circle mr-3") %>
+    <%= image_tag(avatar_url(friends), size: "80x80", class: "rounded-circle mr-3") %>
   <% end %>
   <div class="media-body">
     <div class="row">
