--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,24 +7,26 @@
 
 <%= image_tag(@post.image, width: "690", class: "img-fluid shadow-lg rounded-4") if @post.image.attached? %>
 
-<div class="share-toolkit card my-4">
-  <div class="card-body d-flex flex-column flex-md-row align-items-md-center justify-content-between">
-    <div class="mb-3 mb-md-0">
-      <h5 class="mb-1 font-weight-bold">シェアして回答を集めましょう</h5>
-      <p class="text-muted small mb-0">以下のリンクをコピーするか、「Twitterで共有」ボタンを押してフォロワーに質問を届けてください。</p>
-    </div>
-    <div class="share-actions w-100 w-md-auto d-flex flex-column flex-md-row gap-2">
-      <div class="input-group share-link-group">
-        <input type="text" class="form-control share-url-input" value="<%= request.original_url %>" readonly>
-        <div class="input-group-append">
-          <button class="btn btn-outline-secondary js-copy-link" type="button"><i class="fas fa-copy mr-1"></i>コピー</button>
-        </div>
+<% if current_user == @user %>
+  <div class="share-toolkit card my-4">
+    <div class="card-body d-flex flex-column flex-md-row align-items-md-center justify-content-between">
+      <div class="mb-3 mb-md-0">
+        <h5 class="mb-1 font-weight-bold">シェアして回答を集めましょう</h5>
+        <p class="text-muted small mb-0">リンクのコピーやTwitterシェアでフォロワーに質問を届けられます。</p>
       </div>
-      <%= link_to "Twitterで共有", "https://twitter.com/intent/tweet?text=#{ERB::Util.url_encode("#{@user.username}さんの質問です #MyQuestion")}&url=#{CGI.escape(request.original_url)}",
-          class: "btn btn-gradient text-center", target: "_blank", rel: "noopener", data: { turbo: false } %>
+      <div class="share-actions w-100 w-md-auto d-flex flex-column flex-md-row gap-2">
+        <div class="input-group share-link-group">
+          <input type="text" class="form-control share-url-input" value="<%= request.original_url %>" readonly>
+          <div class="input-group-append">
+            <button class="btn btn-outline-secondary js-copy-link" type="button"><i class="fas fa-copy mr-1"></i>コピー</button>
+          </div>
+        </div>
+        <%= link_to "Twitterで共有", "https://twitter.com/intent/tweet?text=#{ERB::Util.url_encode("#{@user.username}さんの質問です #MyQuestion")}&url=#{CGI.escape(request.original_url)}",
+            class: "btn btn-gradient text-center", target: "_blank", rel: "noopener", data: { turbo: false } %>
+      </div>
     </div>
   </div>
-</div>
+<% end %>
 
 <div class="toppage-profile card my-5">
   <div class="card-body">
