--- a/app/views/posts/_posts.html.erb
+++ b/app/views/posts/_posts.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card posts-card">
   <div class="card-body">
     <ul class="list-unstyled" >
       <% posts.each do |post| %>
