--- a/app/views/toppages/edit.html.erb
+++ b/app/views/toppages/edit.html.erb
@@ -1,12 +1,13 @@
 <div class="logout mb-5 text-center">
   <h1>ログアウト</h1>
   <%= link_to "ログアウト", destroy_user_session_path, method: :delete,
-      class: "btn btn-secondary btn-block" %>
+      class: "btn btn-outline-secondary btn-block py-3" %>
 </div>
 <div class="withdraw my-5 text-center">
   <h1>退会</h1>
   <p>Twitterとの連携を解除し、退会します。<br>
     なお、退会すると今までの質問がすべて削除されますのでご注意ください。</p>
-  <%= button_to "退会する", registration_path,
-    data: { confirm: "本当に退会しますか？" }, method: :delete %>
+  <%= link_to "退会する", registration_path,
+    data: { confirm: "本当に退会しますか？" }, method: :delete,
+    class: "btn btn-outline-danger btn-block py-3" %>
 </div>
