Fix favicon asset path in navbar

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -1,7 +1,7 @@
 <ul class="nav justify-content-center align-items-center py-3">
   <li class="nav-item mr-4">
     <%= link_to(user_signed_in? ? toppages_show_path : root_path, class: "navbar-brand font-weight-bold text-dark d-inline-flex align-items-center") do %>
-      <%= image_tag "favicon.ico", size: "24x24", class: "mr-2" %>
+      <%= image_tag "/favicon.ico", size: "24x24", class: "mr-2" %>
       Quester
     <% end %>
   </li>
